fixed overlapping sidebar

--- a/Project2/src/app/navbar/navbar.component.css
+++ b/Project2/src/app/navbar/navbar.component.css
@@ -1,13 +1,17 @@
 .navbar-default {
     background: rgb(27, 162, 240);
-    color: white;  
+    color: white;
+    margin-left: 245px;
+    width:83.8%;
+    margin-top: -1px;
+    padding-top: 0px;
 }
 .navbar-brand {
     font-size: 1.5em;
     color: white;
 }
 .nav.navbar a {
-    
+
     color: white;
 }
 
